Fix issue with poster-outer overflow

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   grid-column: 4;
   grid-row: 1 / 5;
   text-align: center;
+  overflow: hidden;
 }
 
 .chart-panel {
